# tmht

./: AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  VISION.md  pyproject.toml
.agents/analysis/: security-tasks.md
.github/workflows/: python-publish.yml  tests.yml
docs/: configuration.html  development.html  getting-started.html  index.html  usage.html
scripts/: check_version_consistency.py  validate_release_tag.py
src/tmht/: __init__.py  __main__.py  cli.py  config.py  context.py  llm.py  models.py  prompt.py  setup.py  tmht.py
src/tutr/: __init__.py  cli.py  config.py  context.py  llm.py  models.py  prompt.py  setup.py  shell.py  tutr.py  update_check.py  wait_indicator.py
src/tutr/cli/: __init__.py  app.py  configure.py  query.py  shared.py  wizard.py
src/tutr/models/: __init__.py  command_response.py  provider_info.py  shell_launch_config.py  tutr_config.py
src/tutr/shell/: __init__.py  constants.py  detection.py  hooks.py  loop.py  shell.py
tests/: integration_live_cases.json  test_cli.py  test_config.py  test_context.py  test_integration_live.py  test_llm.py  test_main_module.py  test_models.py  test_prompt.py  test_setup.py  test_shell.py  test_tmht.py  test_tutr.py  test_update_check.py  test_wait_indicator.py
