[project]
name = "tutr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "spi", email = "spi3@pm.me" }
]
requires-python = ">=3.10"
dependencies = [
    "litellm>=1.81.13",
    "pydantic>=2.12.5",
]

[project.scripts]
tutr = "tutr.cli:entrypoint"
test = "pytest:main"
shell = "tutr.shell:entrypoint"

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: live integration tests that call real external/local LLM systems",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "poethepoet>=0.37.0",
    "pytest>=9.0.2",
    "ruff>=0.13.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["F"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
files = ["src", "tests"]
strict = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
pretty = true

[[tool.mypy.overrides]]
module = ["tests.*"]
check_untyped_defs = false
disallow_untyped_calls = false
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.poe.tasks.check]
sequence = [
    { cmd = "ruff check ." },
    { cmd = "ruff format --check ." },
    { cmd = "mypy" },
    { cmd = "pytest -q" },
]
